<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context="kmitl.mobile.project.bawonsak58070074.tradeevent.controller.Activity.EventDetailActivity"
    >

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginBottom="68dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <ImageView
                android:id="@+id/eventImageDec"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:scaleType="centerCrop"
                android:src="@drawable/event" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#f9f6f6">

                <TextView
                    android:id="@+id/eventDateDec"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:background="#ff4656"
                    android:gravity="center"
                    android:text="@string/_15dec_n_n20dec"
                    android:textColor="#FFFFFF" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/eventNameDec"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/eventname"
                        android:textColor="#000000"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/eventLocationIC"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/ic_action_name" />

                        <TextView
                            android:id="@+id/eventLocationDec"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:text="@string/station"
                            android:textColor="#000000" />

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/eventTimeImage"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_dialog_time" />

                <TextView
                    android:id="@+id/eventTimeDec"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:layout_toRightOf="@+id/eventTimeImage"
                    android:text="@string/time"
                    android:textColor="#000000" />

                <ImageView
                    android:id="@+id/shareBtnDec"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:paddingEnd="10dp"
                    android:src="@drawable/ic_menu_share" />
            </RelativeLayout>

            <TextView
                android:id="@+id/detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/detail" />

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#f9f6f6">
                <LinearLayout
                    android:id="@+id/whoGo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    >
                <LinearLayout
                    android:layout_margin="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_menu_user"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Who Go"
                        />
                </LinearLayout>
                </LinearLayout>
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#000000"
                    />
                <LinearLayout
                    android:id="@+id/whoBuy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    >
                <LinearLayout
                    android:layout_margin="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_menu_user"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Who Buy"
                        />
                </LinearLayout>
                </LinearLayout>

            </LinearLayout>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/memberListDec"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_marginBottom="10dp"
                />

        </LinearLayout>

    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="15dp"
        android:layout_alignParentBottom="true"
        android:background="#f9f6f6"
        >

        <LinearLayout
            android:id="@+id/wantBuy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="40dp"
            android:background="@drawable/button_selector"
            android:orientation="horizontal"
            android:padding="3dp">

            <ImageView
                android:id="@+id/wantBuyPic"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_buy" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Want to buy ?"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/wantGo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_selector"
            android:orientation="horizontal"
            android:padding="3dp">

            <ImageView
                android:id="@+id/wantGoPic"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_go" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Want to go ?"
                android:textColor="#000000" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
