<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="kmitl.mobile.project.bawonsak58070074.tradeevent.controller.Activity.MainActivity"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="600dp"
  />

    <LinearLayout
        android:id="@+id/menuBar"
        android:padding="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:background="#fefdfd"
        >
        <LinearLayout
            android:id="@+id/homeBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="vertical"

            >

            <ImageView
                android:id="@+id/homeIv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_name"
                android:layout_gravity="center"
                />
            <TextView
                android:id="@+id/homeTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event"
                android:layout_gravity="center"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/eventBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="vertical"
            >

            <ImageView
                android:id="@+id/eventIv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_menu_time"
                android:layout_gravity="center"
                />
            <TextView
                android:id="@+id/eventTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coming_soon"
                android:layout_gravity="center"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ratingBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/ratingIv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_menu_rating"
                android:layout_gravity="center"
                />
            <TextView
                android:id="@+id/ratingTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating"
                android:layout_gravity="center"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/profileBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/profileIv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_menu_user"
                android:layout_gravity="center"
                />

            <TextView
                android:id="@+id/profileTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:layout_gravity="center"
                />
        </LinearLayout>

    </LinearLayout>
    <View
        android:layout_alignTop="@+id/menuBar"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#a5a5a5"/>

</RelativeLayout>
